Fixed footer spacing issue on 760px screens

--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -20,7 +20,13 @@
   }
 }
 
-@media screen and (max-width: 435px) {
+@media screen and (max-width: 767px) {
+  .cover__background {
+    height: 480px;
+  }
+}
+
+@media screen and (max-width: 425px) {
   .cover__background {
     height: 200px;
   }
