--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -10,15 +10,15 @@
 
 @media screen and (max-width: 1023px) {
   .place__image {
-    max-width: 440px;
-    max-height: 440px;
+    width: 440px;
+    height: 440px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .place__image {
-    max-width: 330px;
-    max-height: 330px;
+    width: 330px;
+    height: 330px;
   }
 }
 
