--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,7 +1,7 @@
 .place__paragraph {
   max-width: 484px;
   width: 95%;
-  font-weight: 400;
+  font-weight: normal;
   font-size: 18px;
   line-height: 29px;
   grid-area: text;
